main: ForgetPassword + RestPassword Method and View  (Complate)
 Forget Password + RestPassowrd Create + Email Service Create + Startup Connected + Mail.Kit and Mime.Kit Package Download

--- a/Portfolio_Front_End/index.html
+++ b/Portfolio_Front_End/index.html
@@ -50,11 +50,17 @@
           
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li class="dropdown"><a href="#"><i style="font-size:1.5rem;"  class="bi bi-person"></i> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+            <ul class=" text-center">
+              <li>
+                <div class="w-50" style="position: relative;
+                left: 50%;
+                transform:translate(-50%,0%);" >
+                  <img class="img-fluid rounded-circle" src="/assets/img/testimonial-2.jpg" alt="">
+                </div>
+              </li>
+              <li><a href="#" class="d-block">Drop Down 2</a></li>
+              <li><a href="#" class="d-block">Drop Down 3</a></li>
+              <li><a href="#" class="d-block">Drop Down 4</a></li>
             </ul>
           </li>
         </ul>
