main: Comment UnComplate

--- a/Portfolio_Front_End/blog-single.html
+++ b/Portfolio_Front_End/blog-single.html
@@ -180,7 +180,7 @@
                     <a href="3">Reply</a>
                   </div>
                 </li>
-                <li>
+                <li id="her156">
                   <div class="comment-avatar">
                     <img src="assets/img/testimonial-4.jpg" alt="">
                   </div>
@@ -201,14 +201,16 @@
                     <img src="assets/img/testimonial-2.jpg" alt="">
                   </div>
                   <div class="comment-details">
-                    <h4 class="comment-author">Oliver Colmenares</h4>
+                    <h4 class="comment-author parent-coment" data-parent="her156"> Oliver Colmenares</h4>
                     <span>18 Sep 2017</span>
                     <p>
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores reprehenderit, provident cumque
                       ipsam temporibus maiores
                       quae.
                     </p>
-                    <a href="3">Reply</a>
+                    <a class="replay" data-add="0" data-userid="1565" data-commentid="16" href="3">Reply</a>
+                    
+
                   </div>
                 </li>
                 <li>
@@ -388,8 +390,12 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
+  
+
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+
 
 </body>
 
