--- a/AdminPanelFront/srtdash/testing.html
+++ b/AdminPanelFront/srtdash/testing.html
@@ -657,6 +657,10 @@
     <script src="assets/js/jquery.slimscroll.min.js"></script>
     <script src="assets/js/jquery.slicknav.min.js"></script>
 
+    <script>
+        
+    </script>
+
     <!-- others plugins -->
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/scripts.js"></script>
