main: Comment Send Up V
AssistantController Comment  Send Complate

--- a/Portfolio_Front_End/blog-single.html
+++ b/Portfolio_Front_End/blog-single.html
@@ -214,6 +214,21 @@
 
                   </div>
                 </li>
+                <li class="comment-children">
+                  <div class="comment-avatar">
+                    <img src="assets/img/testimonial-2.jpg" alt="">
+                  </div>
+                  <div class="comment-details w-100">
+                    <h4 class="comment-author parent-coment" data-parent="her156"> Oliver Colmenares</h4>
+                    <span>18 Sep 2017</span>
+                    <p >
+                      
+                      ipsam temporibus maiores
+                    </p>
+                    
+                    <a class="replay" data-add="0" data-userid="001" data-commentid="16" href="3">Reply</a>
+                  </div>
+                </li>
                 <li>
                   <div class="comment-avatar">
                     <img src="assets/img/testimonial-2.jpg" alt="">
