--- a/AdminPanelFront/srtdash/pagination.html
+++ b/AdminPanelFront/srtdash/pagination.html
@@ -362,8 +362,8 @@
                                 <div class="header-title">Working With Icons</div>
                                 <nav aria-label="Page navigation example">
                                     <ul class="pagination">
-                                        <li class="page-item">
-                                            <a class="page-link" href="#" aria-label="Previous">
+                                        <li class="page-item disabled">
+                                            <a class="page-link " href="#" aria-label="Previous">
                                                 <span aria-hidden="true">&laquo;</span>
                                                 <span class="sr-only">Previous</span>
                                             </a>
