main: Comment => Load More Front Complate
Load more Front Code Complate

--- a/Portfolio_Front_End/blog-single.html
+++ b/Portfolio_Front_End/blog-single.html
@@ -254,6 +254,7 @@
                     </p>
                     <a class="replay" data-add="0" data-userid="0" data-commentid="16" href="3">Reply</a>
                   </div>
+                  <button class="btn d-block w-100 my-2 btn-light text-center">See Comment</button>
                 </li>
               </ul>
             </div>
