main: See Answer Complate + 1 Problem
See Answer Complate + 1 Problem JavaScript Not Load See Answer Button Event

--- a/Portfolio_Front_End/blog-single.html
+++ b/Portfolio_Front_End/blog-single.html
@@ -256,6 +256,26 @@
                   </div>
                   <button class="btn d-block w-100 my-2 btn-light text-center">See Comment</button>
                 </li>
+                <li>
+                  <ul class="list-unstyled po">
+                    <li>
+                      <div class="comment-avatar">
+                        <img src="assets/img/testimonial-2.jpg" alt="">
+                      </div>
+                      <div class="comment-details">
+                        <h4 class="comment-author">Oliver Colmenares</h4>
+                        <span>18 Sep 2017</span>
+                        <p>
+                          1111111111 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores reprehenderit, provident cumque
+                          ipsam temporibus maiores
+                          quae natus libero optio.
+                        </p>
+                        <a class="replay" data-add="0" data-userid="0" data-commentid="16" href="3">Reply</a>
+                      </div>
+                      <button class="btn d-block w-100 my-2 btn-light text-center">See Comment</button>
+                    </li>
+                  </ul>
+                </li>
               </ul>
             </div>
             <div class="form-comments">
